## Process this file with automake to produce Makefile.in

CPPLINT = cpplint
FINALTARGET = ikev2
ECHO = echotest

AM_CPPFLAGS = -DPACKAGE_LOCALE_DIR=\""$(localedir)"\"
AM_CPPFLAGS += -DPACKAGE_SRC_DIR=\""$(srcdir)"\"
AM_CPPFLAGS += -DPACKAGE_DATA_DIR=\""$(pkgdatadir)"\"
AM_CPPFLAGS += -Wall -Werror

# Enable debugging
if IKEV2_DBG
    AM_CPPFLAGS += -DIKEV2_DBG
    AM_CPPFLAGS += -g -pg
endif

# Enable code coverage
if IKEV2_GCOV
    AM_CPPFLAGS += -fprofile-arcs -ftest-coverage
endif

bin_PROGRAMS = $(FINALTARGET) $(ECHO)

## Put all your source files here
ikev2_SOURCES = ikev2main.cc
ikev2_SOURCES += ikev2payload.cc
ikev2_SOURCES += ikev2pkt.cc
ikev2_SOURCES += ikev2sm
ikev2_SOURCES += logging.cc
ikev2_SOURCES += network.cc
ikev2_SOURCES += crypto.cc
ikev2_SOURCES += threadpool.cc
ikev2_SOURCES += ikev2config.cc
ikev2_SOURCES += timer.cc
ikev2_SOURCES += utils.cc
ikev2_SOURCES += synchro.cc
ikev2_SOURCES += asyncio.cc

# enable google's backtrace support
if IKEV2_DBG
    ikev2_SOURCES += backward.cc
endif
# linker flags for 3rd party libs
# std::thread
ikev2_LDFLAGS = -lpthread -Wl,--no-as-needed
# log4cpp
ikev2_LDFLAGS += -llog4cpp
# openssl
ikev2_LDFLAGS += -lssl
# boost
ikev2_LDFLAGS += -lboost_system

# Enable coverage
if IKEV2_GCOV
    ikev2_LDFLAGS += --coverage
endif

# enable google's backtrace support
if IKEV2_DBG
    ikev2_LDFLAGS += -ldw
endif

ikev2_LDADD =

##################################
echotest_SOURCES = echotest.cc
echotest_LDFLAGS = --coverage -lpthread -Wl,--no-as-needed -fprofile-arcs -ftest-coverage
##################################

# Perform lint using Google's cpplint
cpplint: ; @for cpp in *.cc; do echo "Linting $$cpp"; cpplint $$cpp; done ;
hlint: ; @for cpp in *.hh; do echo "Linting $$cpp"; cpplint $$cpp; done ;

# Enable coverage
if IKEV2_GCOV
# Get coverage report and display in chrome
coverage: ;lcov --no-external -b . -d . -c -o report; genhtml -f -s -t "IKEv2" --legend --sort --function-coverage --branch-coverage --demangle-cpp report ; /opt/google/chrome/google-chrome index.html

endif

# Run valgrind
if IKEV2_DBG
memcheck: ;valgrind --leak-check=full --show-reachable=yes --track-fds=yes  --track-origins=yes --read-var-info=yes "./"$(FINALTARGET)
endif

cppcheck: ;cppcheck --inconclusive --enable=all .

# Clean files generated by gcov
clean-local: clean-local-check
.PHONY: clean-local-check
clean-local-check: ; rm -rf *core* *.g* *.png *.html *.css home usr 4.8 report src *.out *.out.*
